@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+    id 'jacoco'  // ← Plugin de coverage
+    id 'org.sonarqube' version '6.0.1.5171'  // ← Plugin do SonarQube
 }
 
 group = 'soat-project'
@@ -52,7 +54,9 @@ dependencies {
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
+    implementation "software.amazon.awssdk:sts"
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-database-postgresql'
 	runtimeOnly 'org.postgresql:postgresql'
@@ -72,6 +76,9 @@ dependencies {
 	runtimeOnly('io.jsonwebtoken:jjwt-impl:0.12.5')
 	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.12.5')
 
+    //aws
+    implementation "io.awspring.cloud:spring-cloud-aws-starter-sqs"
+
 	// Spring Jakarta Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
@@ -82,7 +89,108 @@ dependencies {
 	testImplementation("org.testcontainers:postgresql:1.19.7")
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation "org.mockito:mockito-core:5.11.0"
+    testImplementation "org.mockito:mockito-inline:5.2.0"
+
+
+
+
+
 }
+ext {
+    projectVersion = "3.0.2"
+}
+
+
+dependencyManagement {
+    imports {
+        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:${projectVersion}"
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+    dependsOn test
+
+    reports {
+        xml.required = true
+        html.required = true
+        csv.required = false
+    }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/Application.class',
+                    '**/adapter/**',
+                    '**/port/**',
+                    '**/config/**',
+                    '**/dto/**',
+                    '**/entity/**'
+            ])
+        }))
+    }
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+    jvmArgs(
+            "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }}",
+            "-XX:+EnableDynamicAgentLoading"
+    )
+}
+
+// Configuração do SonarQube
+sonar {
+    properties {
+        property "sonar.projectKey", "SOAT-Project_fastfood-order-service"
+        property "sonar.organization", "soat-project"
+        property "sonar.host.url", "https://sonarcloud.io"
+
+        property "sonar.java.source", "21"
+        property "sonar.sourceEncoding", "UTF-8"
+
+        // Diretórios
+        property "sonar.sources", "src/main/java"
+        property "sonar.tests", "src/test/java"
+        property "sonar.java.binaries", "build/classes/java/main"
+        property "sonar.java.test.binaries", "build/classes/java/test"
+
+        // Coverage
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+
+        // Exclusões
+        property "sonar.exclusions", [
+                "**/Dockerfile",
+                "**/*.md",
+                "**/*.yml",
+                "**/*.yaml",
+                "**/*.json",
+                "**/*.txt",
+                "**/resources/**/*.xml",
+                "**/resources/**/*.properties"
+        ].join(",")
+
+        property "sonar.coverage.exclusions", [
+                "**/Application.java",
+                "**/adapter/**",
+                "**/port/**",
+                "**/config/**",
+                "**/dto/**",
+                "**/entity/**"
+        ].join(",")
+
+        property "sonar.test.exclusions", "src/test/**/*"
+        property "sonar.cpd.exclusions", "src/test/**/*"
+    }
+}
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
